fix(auth): #26720, Improve readability of forgot password/id buttons

--- a/css/modules/_panel.scss
+++ b/css/modules/_panel.scss
@@ -165,6 +165,10 @@
             a {
                 margin-top: 10px;
                 font-size: 22px;
+                &.forgot-link {
+                    font-size: 18px;
+                    margin: 0;
+                }
             }
         }
         .welcome-text+form {
@@ -181,6 +185,7 @@
             width: 100%;
             height: 32px;
             margin-top: 5px;
+            margin-bottom: 0;
             float: none;
         }
         input[type=checkbox]#rememberMe {
